Modification page compte-commentaires.html & ajout page compte-commandes.html et compte-préférence.html

--- a/demo-front-nogashi/compte.html
+++ b/demo-front-nogashi/compte.html
@@ -130,7 +130,7 @@
         <div class="container">
                <div class="row">
                     <div class="bloc-edition-profil col-12">
-                        <h1 class="titre-edition">// Votre Profil</h1>  
+                        <h1 class="titre-edition"><i class="fas fa-user"></i> / Votre Profil</h1>  
                         <form action="" method="get">
                            <div class="profil-avatar col-12">
                                <img class="photo-avatar" src="css/img/profil/profil.png" alt="photo de l'utilisateur" >
