Amélioration menu des pages compte, continuation compte-preferences.html et modifications menu page accueil-particulier.html.

--- a/demo-front-nogashi/compte-commandes.html
+++ b/demo-front-nogashi/compte-commandes.html
@@ -92,37 +92,41 @@
                         <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
                         </p>
                     </div>
-                </div> 
-                <div class="bloc-onglet">
-                    <a href="compte.html">
-                        <div class="onglet">
-                            <p class="nom-onglet">
-                                Profil
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-preferences.html">
-                        <div class="onglet2">
-                            <p class="nom-onglet">
-                                Préférences
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-commandes.html">
-                        <div class="onglet3">
-                            <p class="nom-commandes">
-                                Commandes
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-commentaires.html">
-                        <div class="onglet4">
-                            <p class="nom-commentaires">
-                                Commentaires
-                            </p>
-                        </div>
-                    </a>
-                </div>   
+                </div>
+                
+                <div class="grand-bloc-onglets"> 
+                    <div class="bloc-onglet">
+                        <a href="compte.html">
+                            <div class="onglet">
+                                <p class="nom-onglet">
+                                   <i class="fas fa-user"></i> Profil
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-preferences.html">
+                            <div class="onglet2">
+                                <p class="nom-onglet">
+                                    <i class="fas fa-cog"></i> Préférences
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-commandes.html">
+                            <div class="onglet3">
+                                <p class="nom-commandes">
+                                    <i class="fas fa-cube"></i> Commandes
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-commentaires.html">
+                            <div class="onglet4">
+                                <p class="nom-commentaires">
+                                    <i class="fas fa-comments"></i> Commentaires
+                                </p>
+                            </div>
+                        </a>
+                    </div> 
+                </div>
+                    
             </div>
         </div>
     </section>
