--- a/demo-front-nogashi/compte-commentaires.html
+++ b/demo-front-nogashi/compte-commentaires.html
@@ -92,37 +92,41 @@
                         <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
                         </p>
                     </div>
-                </div> 
-                <div class="bloc-onglet">
-                    <a href="compte.html">
-                        <div class="onglet">
-                            <p class="nom-onglet">
-                                Profil
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-preferences.html">
-                        <div class="onglet2">
-                            <p class="nom-onglet">
-                                Préférences
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-commandes.html">
-                        <div class="onglet3">
-                            <p class="nom-commandes">
-                                Commandes
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-commentaires.html">
-                        <div class="onglet4">
-                            <p class="nom-commentaires">
-                                Commentaires
-                            </p>
-                        </div>
-                    </a>
-                </div>   
+                </div>
+                
+                <div class="grand-bloc-onglets"> 
+                    <div class="bloc-onglet">
+                        <a href="compte.html">
+                            <div class="onglet">
+                                <p class="nom-onglet">
+                                    <i class="fas fa-user"></i> Profil
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-preferences.html">
+                            <div class="onglet2">
+                                <p class="nom-onglet">
+                                    <i class="fas fa-cog"></i> Préférences
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-commandes.html">
+                            <div class="onglet3">
+                                <p class="nom-commandes">
+                                    <i class="fas fa-cube"></i> Commandes
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-commentaires.html">
+                            <div class="onglet4">
+                                <p class="nom-commentaires">
+                                    <i class="fas fa-comments"></i> Commentaires
+                                </p>
+                            </div>
+                        </a>
+                    </div> 
+                </div>
+                    
             </div>
         </div>
     </section>
@@ -148,7 +152,7 @@
                             </div>
                             <p class="date">publié il y a 1 mois <i class="fas fa-trash-alt"></i></p>
                          </div>
-                         <hr class="separation-commentaire">
+                         <div class="separation-commentaire"></div>
                          <p class="commentaire">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos magni sit in tenetur eius, non officiis eligendi et modi iste quisquam quia ipsam ipsa deleniti, impedit reiciendis dolorum. Tempora, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos magni sit in tenetur eius, non officiis eligendi et modi iste quisquam quia ipsam ipsa deleniti, impedit reiciendis dolorum. Tempora, dolorum.</p>
                     </div>    
                  </div>
@@ -170,7 +174,7 @@
                             </div>
                             <p class="date">publié il y a 1 mois <i class="fas fa-trash-alt"></i></p>
                          </div>
-                         <hr class="separation-commentaire"> 
+                         <div class="separation-commentaire"></div>
                          <p class="commentaire">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos magni sit in tenetur eius, non officiis.</p>
                     </div>    
                  </div>
@@ -192,7 +196,7 @@
                             </div>
                             <p class="date">publié il y a 1 mois <i class="fas fa-trash-alt"></i></p>
                          </div>
-                         <hr class="separation-commentaire">
+                         <div class="separation-commentaire"></div>
                          <p class="commentaire">Lorem ipsum dolor sit amet.</p>
                     </div>    
                  </div>
