--- a/demo-front-nogashi/compte.html
+++ b/demo-front-nogashi/compte.html
@@ -93,36 +93,39 @@
                         </p>
                     </div>
                 </div> 
-                <div class="bloc-onglet">
-                    <a href="compte.html">
-                        <div class="onglet">
-                            <p class="nom-onglet">
-                                Profil
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-preferences.html">
-                        <div class="onglet2">
-                            <p class="nom-onglet">
-                                Préférences
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-commandes.html">
-                        <div class="onglet3">
-                            <p class="nom-commandes">
-                                Commandes
-                            </p>
-                        </div>
-                    </a>
-                    <a href="compte-commentaires.html">
-                        <div class="onglet4">
-                            <p class="nom-commentaires">
-                                Commentaires
-                            </p>
-                        </div>
-                    </a>
-                </div>   
+                
+                <div class="grand-bloc-onglets">
+                    <div class="bloc-onglet">
+                        <a href="compte.html">
+                            <div class="onglet">
+                                <p class="nom-onglet">
+                                  <i class="fas fa-user"></i> Profil
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-preferences.html">
+                            <div class="onglet2">
+                                <p class="nom-onglet">
+                                    <i class="fas fa-cog"></i> Préférences
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-commandes.html">
+                            <div class="onglet3">
+                                <p class="nom-commandes">
+                                    <i class="fas fa-cube"></i> Commandes
+                                </p>
+                            </div>
+                        </a>
+                        <a href="compte-commentaires.html">
+                            <div class="onglet4">
+                                <p class="nom-commentaires">
+                                    <i class="fas fa-comments"></i> Commentaires
+                                </p>
+                            </div>
+                        </a>
+                    </div> 
+                </div>  
             </div>
         </div>
     </section>
